[package]
name = "web3tech-test"
version = "0.1.0"
authors = ["Artur Aralin <artur.aralin97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
